--- a/README
+++ b/README
@@ -3,6 +3,9 @@ bdog-stdhx provides haXe integration features and standard library support. I
 was just bundling the js dir, but this can't live on it's own so the entire std
 dir is here.
 
+I use git-svn rebase to sync this project with current haxe before uploading to
+github - so i should be fully compatible with latest haxe.
+
 NOTE
 ----
 
